cloud-infra-macros/tests/fails/message_retention_period_too_low.stderr
error: proc macro panicked
 --> tests/fails/message_retention_period_too_low.rs:4:18
  |
4 |     let period = message_retention_period!(30);
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: value should be at least 60
